--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Week 2 Assignment - Part 1</h1>
     <p>See console for output.</p>
+    <p>Still working on strectch questions</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
   </body>
 </html>
